--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -8,10 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16.x
-      - run: npm ci
-      - run: npm run test
-      - run: npm run build
+    - name: create pull request
+      run: gh pr create -B main -H vasagirisai-pr-1 --title 'Merge branch_to_merge into base_branch' --body 'Created by Github action'
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
