--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -10,10 +10,14 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
-      - name: pull-request
-        uses: repo-sync/pull-request@v2
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v3
         with:
-          destination_branch: "main"
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          pr_label: "feature, automated pr"
-          pr_title: "[Example] Simple demo"
+          commit-message: 'Updates to main branch'
+          title: 'Update to main branch'
+          body: 'This pull request updates the main branch with the latest changes.'
+          labels: 'update, main'
+          reviewers: 'vasagirisai'
+          assignees: 'vsagirisai'
+          branch: 'main'
+          token: ${{ secrets.GITHUB_TOKEN }}
