--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -29,5 +29,6 @@ jobs:
           author: ${{ env.GIT_COMMIT_AUTHOR_NAME }} <${{ env.GIT_COMMIT_AUTHOR_EMAIL }}">
           body:
             This is to show automatic PR creation
+          reviewer: vasagirisai
           token: ${{ secrets.GITHUB_TOKEN }}
           delete-branch: true
