--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -22,8 +22,8 @@ jobs:
         id: demo-1
         uses: peter-evans/create-pull-request@v3
         with:
-          branch: "vasagiri-pr-1"
-          base: main
+          branch: "main"
+          base: vasagiri-pr-1
           title: "demo for auto pr1"
           committer: ${{ env.GIT_COMMIT_AUTHOR_NAME }} <${{ env.GIT_COMMIT_AUTHOR_EMAIL }}">
           author: ${{ env.GIT_COMMIT_AUTHOR_NAME }} <${{ env.GIT_COMMIT_AUTHOR_EMAIL }}">
