--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -3,7 +3,7 @@ name: Demo to create automatic PR
 on:
   push:
     branches:
-      - main
+      - vasagirisai-pr-1
 
 jobs:
   updateAuthor:
@@ -22,8 +22,8 @@ jobs:
         id: demo-1
         uses: peter-evans/create-pull-request@v3
         with:
-          branch: "vasagirisai-pr-2"
-          base: main
+          branch: "main"
+          base: vasagirisai-pr-1
           title: "demo for auto pr1"
           committer: ${{ env.GIT_COMMIT_AUTHOR_NAME }} <${{ env.GIT_COMMIT_AUTHOR_EMAIL }}">
           author: ${{ env.GIT_COMMIT_AUTHOR_NAME }} <${{ env.GIT_COMMIT_AUTHOR_EMAIL }}">
@@ -31,4 +31,3 @@ jobs:
             This is to show automatic PR creation
           reviewer: vasagirisai
           token: ${{ secrets.GITHUB_TOKEN }}
-          delete-branch: true
