--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -3,7 +3,7 @@ name: Demo to create automatic PR
 on:
   push:
     branches:
-      - vasagirisai-pr-1
+      - main
 
 jobs:
   updateAuthor:
@@ -22,12 +22,12 @@ jobs:
         id: demo-1
         uses: peter-evans/create-pull-request@v3
         with:
-          branch: "main"
-          base: vasagirisai-pr-1
+          branch: "auto-pr-branch1"
+          base: main
           title: "demo for auto pr1"
           committer: ${{ env.GIT_COMMIT_AUTHOR_NAME }} <${{ env.GIT_COMMIT_AUTHOR_EMAIL }}">
           author: ${{ env.GIT_COMMIT_AUTHOR_NAME }} <${{ env.GIT_COMMIT_AUTHOR_EMAIL }}">
           body:
             This is to show automatic PR creation
-          reviewer: vasagirisai
           token: ${{ secrets.GITHUB_TOKEN }}
+          delete-branch: true
