--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           branch: "auto-pr-branch1"
           base: main
-          title: "demo for auto pr1"
+          title: "demo for auto pr"
           committer: ${{ env.GIT_COMMIT_AUTHOR_NAME }} <${{ env.GIT_COMMIT_AUTHOR_EMAIL }}">
           author: ${{ env.GIT_COMMIT_AUTHOR_NAME }} <${{ env.GIT_COMMIT_AUTHOR_EMAIL }}">
           body:
