--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -22,7 +22,7 @@ jobs:
         id: demo-1
         uses: peter-evans/create-pull-request@v3
         with:
-          branch: "auto-pr-branch1"
+          branch: "vasagirisai-pr-1"
           base: main
           title: "demo for auto pr"
           committer: ${{ env.GIT_COMMIT_AUTHOR_NAME }} <${{ env.GIT_COMMIT_AUTHOR_EMAIL }}">
