--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -30,3 +30,4 @@ jobs:
           body:
             This is to show automatic PR creation
           token: ${{ secrets.GITHUB_TOKEN }}
+          reviewers: vasagirisai
