--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -3,7 +3,7 @@ name: Demo to create automatic PR
 on:
   push:
     branches:
-      - main
+      - auto-pr-branch1
 
 jobs:
   updateAuthor:
@@ -22,8 +22,8 @@ jobs:
         id: demo-1
         uses: peter-evans/create-pull-request@v3
         with:
-          branch: "auto-pr-branch1"
-          base: main
+          branch: "main"
+          base: auto-pr-branch1
           title: "demo for auto pr1"
           committer: ${{ env.GIT_COMMIT_AUTHOR_NAME }} <${{ env.GIT_COMMIT_AUTHOR_EMAIL }}">
           author: ${{ env.GIT_COMMIT_AUTHOR_NAME }} <${{ env.GIT_COMMIT_AUTHOR_EMAIL }}">
