--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -1,33 +1,15 @@
-name: Demo to create automatic PR
-
+name: Pull Request on Branch Push
 on:
   push:
-    branches:
-      - auto-pr-branch1
-
+    branches: auto-pr-branch1
 jobs:
-  updateAuthor:
+  auto-pull-request:
+    name: PullRequestAction
     runs-on: ubuntu-latest
     steps:
-      - name: checking out code
-        uses: actions/checkout@v2
-
-      - name: extract git commit data
-        uses: rlespinasse/git-commit-data-action@v1.x
-
-      - name: Update author information
-        run: echo ${{ env.GIT_COMMIT_AUTHOR_NAME }} > AUTHOR
-
-      - name: Raise PR 1
-        id: demo-1
-        uses: peter-evans/create-pull-request@v3
-        with:
-          branch: "main"
-          base: auto-pr-branch1
-          title: "demo for auto pr1"
-          committer: ${{ env.GIT_COMMIT_AUTHOR_NAME }} <${{ env.GIT_COMMIT_AUTHOR_EMAIL }}">
-          author: ${{ env.GIT_COMMIT_AUTHOR_NAME }} <${{ env.GIT_COMMIT_AUTHOR_EMAIL }}">
-          body:
-            This is to show automatic PR creation
-          token: ${{ secrets.GITHUB_TOKEN }}
-          reviewers: vasagirisai
+      - name: pull-request-action
+        uses: vsoch/pull-request-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH_PREFIX: auto-pr-branch1
+          PULL_REQUEST_BRANCH: "master"
